[tool.poetry]
name = "explorer-api"
version = "1.0.0"
description = ""
authors = ["Marcos Monteiro <marcosmmb90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
httpx = "^0.14.3"
uvicorn = "^0.11.8"
prettyconf = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
isort = "^5.5.2"
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
