[tool.poetry]
name = "explorer-api"
description = ""
authors = ["Marcos Monteiro <marcosmmb90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
httpx = "^0.14.3"
uvicorn = "^0.11.8"
prettyconf = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
